# OmniLynceusPlugin

./: Cargo.toml
cli/: Cargo.toml  README.md
cli/src/: commands.rs  main.rs  template.rs
cli/src/commands/: build.rs  new.rs
cli/templates/default/: plugin.toml.tmpl
cli/templates/default/src/: main.rs.tmpl
lib/: Cargo.toml  README.md
lib/src/: lib.rs
omnilynceus-lib/: Cargo.toml
src/: lib.rs
